--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,11 +6,15 @@ version: 1.0.0+1
 
 environment:
   sdk: ^3.8.1
+
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.2.3
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
 dev_dependencies:
   flutter_test:
@@ -18,6 +22,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
+  generate: true
   uses-material-design: true
   assets:
      - assets/images/
