--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.2.3
+  smooth_page_indicator: ^2.0.1
   flutter_localizations:
     sdk: flutter
   intl: any
