--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\Users\Pc\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\Pc\StudioProjects\new_evently
+FLUTTER_ROOT=D:\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\IT\StudioProjects\new-evently
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
