--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_svg: ^2.2.3
   smooth_page_indicator: ^2.0.1
   google_sign_in: ^6.2.1
+  provider: ^6.1.5+1
   flutter_localizations:
     sdk: flutter
   intl: any
